add endpoint cek stok akrab & circle
